fix (frontend): fix ner label dropdown z-index

--- a/frontend/src/pages/PreparePage/components/NlpTextForm/components/NlpTokens/components/NlpTokenItem/styles.scss
+++ b/frontend/src/pages/PreparePage/components/NlpTextForm/components/NlpTokens/components/NlpTokenItem/styles.scss
@@ -17,6 +17,7 @@
   &__dropdown {
     position: absolute;
     top: 100%;
+    z-index: 10;
   }
 
   &__dropdown-form {
